[package]
name = "grid_plane"
version = "0.1.1"
edition = "2021"
authors = ["Georgios Chatoutsidis"]
description = "Grid plane for the bevy game engine"
categories = ["game-development", "games", "graphics"]
keywords = ["grid_plane", "bevy", "mesh", "gamedev", "graphics"]
repository = "https://github.com/George35mk/grid_plane"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10",  default-features = false, features = [
    "bevy_render", "bevy_asset", "bevy_pbr",
]}

[dev-dependencies]
bevy = "0.10"

[[example]]
name = "grid_plane_default"
path = "examples/grid_plane_default.rs"

[[example]]
name = "grid_plane_with_options"
path = "examples/grid_plane_with_options.rs"

[[example]]
name = "grid_plane_with_some_options"
path = "examples/grid_plane_with_some_options.rs"